Closed Bug 62577 Opened 24 years ago Closed 23 years ago

Sublist content disappears when unlisting.

Categories

(Core :: DOM: Editor, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: kinmoz, Assigned: kinmoz)

References

Details

(Keywords: dataloss, Whiteboard: [list][QAHP])

Attachments

(2 files)

I'm seeing this in my Win32 12/11/00 debug trunk build.

1. Create a bullet list that looks something like this:

    o A
        o 1
    o B
        o 2
    o C

2. Now select all the text in the list. (From before A to after C)
3. Now press the bullet list button on the toolbar. You now get:

    A
    B
    C

The sublist items 1 and 2 disappear, they shouldn't.

Strange thing, is that I tried to create a test case for this bug by doing step 
#1, saving it out, but reloading that file in composer, and doing steps #2 and 
#3 yield different results.
moz 0.9
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9
Target Milestone: mozilla0.9 → mozilla0.9.1
moving a bunch of 0.9 bugs to 0.9.1
Whiteboard: [QAHP]
Target Milestone: mozilla0.9.1 → mozilla0.9.2
Whiteboard: [QAHP] → [list][QAHP]
I'll take a look at this one.
Assignee: jfrancis → kin
Status: ASSIGNED → NEW
Attached file A few list test cases.
I just attatched a patch (r=jfrancis@netscape.com) that fixes the Unlist bug 
reported here, an Outdent dataloss bug, and a bug where list conversion wasn't 
coverting all nested lists.

Simon can you review it?
Status: NEW → ASSIGNED
Whiteboard: [list][QAHP] → [list][QAHP] FIX IN HAND, need sr= and a=
r=jfrancis
sr=sfraser
Whiteboard: [list][QAHP] FIX IN HAND, need sr= and a= → [list][QAHP] FIX IN HAND, need a=
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
Fixes checked into TRUNK:

    mozilla/editor/base/nsHTMLEditRules.cpp  revision 1.180
    mozilla/editor/base/nsHTMLEditRules.h    revision 1.68

Should appear in the 06/18/01 8am builds.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: [list][QAHP] FIX IN HAND, need a= → [list][QAHP]
okay now I get the following after selecting and clicking on bullet list:

A
1
B
2
C

marking verified. reopen if this is not the correct output.
Status: RESOLVED → VERIFIED
no, this is not what you should get, you should get a enlarged list -- the 
result should be:

A
B
C
D
E
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
oops, Sujay just pointed out I was being stupid, remarking fixed/verified
v
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: