Fix for bug #62577 - Sublist content disappears when unlisting.

mozilla/editor/base/nsHTMLEditRules.cpp
      - Moved list handling code in WillRemoveList() into a new recursive
        method RemoveListStructure() which WillRemoveList() now calls.

      - Modified WillOutdent() to call MoveNode() when a sublist is encountered.

      - Made ConvertListType() recursive so that all sublists are coverted.

  mozilla/editor/base/nsHTMLEditRules.cpp

      - Added RemoveListStructure() method.

r=jfrancis@netscape.com  sr=sfraser@netscape.com  a=asa@mozilla.org